<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollNews"
    android:layout_gravity="center"
    tools:context=".ui.dashboard.news.NewsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
                    android:text="Jenis-Jenis Penyakit Diabetes"
                    android:textAlignment="center"
                    android:textColor="@color/black"

                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/rv_type_diabetes"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_type_diabetes"
...
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_type_drug"
                    android:layout_width="match_parent"
                    android:layout_height="365dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
...
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_factor_diabetes"
                    android:layout_width="match_parent"
                    android:layout_height="215dp"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toBottomOf="@id/text_factor_diabetes"
                    tools:listitem="@layout/item_type_diabetes" />
            </androidx.constraintlayout.widget.ConstraintLayout>
...
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_factor_risk"
                    android:layout_width="match_parent"
                    android:layout_height="365dp"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toBottomOf="@id/text_factor_risk"
                    tools:listitem="@layout/item_type_diabetes" />
            </androidx.constraintlayout.widget.ConstraintLayout>
...
