<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".ui.profile.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_user"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_user"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_profile_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/img_user"
        app:layout_constraintStart_toStartOf="@id/img_user"
        app:layout_constraintTop_toBottomOf="@id/img_user"
        tools:text="@string/label_name" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="15dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_username">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:padding="16dp">

            <TextView
                android:id="@+id/label_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_name"
                android:textColor="@color/teal_700"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_full_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/label_full_name"
                app:layout_constraintTop_toBottomOf="@id/label_full_name"
                tools:text="@string/label_name" />

            <TextView
                android:id="@+id/label_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_gender"
                android:textColor="@color/teal_700"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_full_name" />

            <TextView
                android:id="@+id/tv_profile_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/label_gender"
                app:layout_constraintTop_toBottomOf="@id/label_gender"
                tools:text="@string/label_gender" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_log_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/red"
        android:drawableLeft="@drawable/ic_logout"
        android:drawablePadding="5dp"
        android:text="Keluar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/card_profile"
        app:layout_constraintStart_toStartOf="@id/card_profile"
        android:layout_marginBottom="?attr/actionBarSize"

        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>