...
                  android:id="@+id/rg_gender"
                  android:layout_width="wrap_content"
                 app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  android:layout_height="wrap_content"
                  android:visibility="invisible"
                  app:layout_constraintBottom_toTopOf="@id/btn_next"
                  app:layout_constraintTop_toTopOf="parent"
                  android:orientation="vertical">

                  <RadioButton
                      android:id="@+id/rb_option1"
                      android:layout_width="200dp"
                      android:text="Option 1"
                      android:textSize="20sp"
                      android:layout_gravity="center"
                      android:gravity="center"
                      android:padding="8dp"
...
                      android:layout_marginVertical="4dp"
                      android:layout_height="wrap_content"/>
              </RadioGroup>


              <Spinner
                  android:id="@+id/spin_age"
                  android:layout_width="0dp"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  android:layout_height="wrap_content"
                  app:layout_constraintStart_toStartOf="@id/btn_previous"
                  app:layout_constraintEnd_toEndOf="@id/btn_next"
...
